Avoid calls to my_seek() and my_tell() on log files so that non-seekable files like FIFOs can be used for logs other than the binlog. (Bug #8271)